crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__text_multiline_kept_verbatim.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>\n    two\n    lines\n</p>\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 5,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 4,
                                column: 1,
                            },
                        },
                        value: Text(
                            "two lines",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
