crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__text_unicode.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>héllo → wörld</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 25,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 21,
                            },
                        },
                        value: Text(
                            "héllo → wörld",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
