crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__text_with_punctuation.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>Hi, there! (see http://x.y/z) = 1 + 2 / 3;</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 50,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 46,
                            },
                        },
                        value: Text(
                            "Hi, there! (see http://x.y/z) = 1 + 2 / 3;",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
