crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__textarea_preserves_literal_whitespace.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<textarea>\n  A\n B  </textarea>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 3,
            column: 16,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 10,
                        },
                    },
                    value: Tag(
                        "textarea",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 11,
                            },
                            end: Position {
                                line: 3,
                                column: 5,
                            },
                        },
                        value: Text(
                            "\n  A\n B  ",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
