crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__whitespace_only_lines_dropped.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<ul>\n    <li>a</li>\n    <li>b</li>\n</ul>\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 6,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: Tag(
                        "ul",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 15,
                            },
                        },
                        value: Element(
                            Element {
                                name: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 6,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 8,
                                        },
                                    },
                                    value: Tag(
                                        "li",
                                    ),
                                },
                                attrs: [],
                                children: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 10,
                                            },
                                        },
                                        value: Text(
                                            "a",
                                        ),
                                    },
                                ],
                                self_closing: false,
                            },
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 15,
                            },
                        },
                        value: Element(
                            Element {
                                name: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 6,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 8,
                                        },
                                    },
                                    value: Tag(
                                        "li",
                                    ),
                                },
                                attrs: [],
                                children: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 10,
                                            },
                                        },
                                        value: Text(
                                            "b",
                                        ),
                                    },
                                ],
                                self_closing: false,
                            },
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
